--- a/client/src/pages/admin/admin.scss
+++ b/client/src/pages/admin/admin.scss
@@ -5,6 +5,7 @@
   }
 
   .admin-content {
+    width: 100%;
     display: grid;
     grid-template: auto / 250px auto;
   }
